--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,16 +19,14 @@ default-run = "point-cloud-bevy"
 [features]
 default = ["editor"]
 editor = ["bevy_editor_pls"]
-inspector = ["bevy-inspector-egui"]
 
 [dependencies]
 ply-rs = "*"
 # Other crates of possible interest:
 # https://bevyengine.org/assets/#assets
 # https://gist.github.com/taurr/962ceb49472993e3092e97b07339c164
-bevy = { version = "0.9.1", features = ["dynamic"] }
-bevy_editor_pls = { version = "0.2.0", optional = true }
-bevy-inspector-egui = { version = "0.14", optional = true }
+bevy = { version = "0.10.1", features = ["dynamic_linking"] }
+bevy_editor_pls = { version = "0.4.0", optional = true }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 bevy-web-resizer = "4.0" #[patch.crates-io]
@@ -44,4 +42,3 @@ opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
-
